--- a/Dolphin/Resources/zh-Hans.lproj/Localizable.strings
+++ b/Dolphin/Resources/zh-Hans.lproj/Localizable.strings
@@ -53,11 +53,11 @@
 /* 什么是新的 */
 "WhatsNew.Title" = "最近更新";
 "WhatsNew.Item1.Title" = "MVVM架构";
-"WhatsNew.Item1.Subtitle" = "内部大量使用了RXSwift与Rx扩展来构建功能,让代码维护变得更简单";
-"WhatsNew.Item2.Title" = "主题";
-"WhatsNew.Item2.Subtitle" = "你可以用Light和Dark两种不同的主题";
-"WhatsNew.Item3.Title" = "采用SwiftUi编写界面";
-"WhatsNew.Item3.Subtitle" = "SwiftUi编写界面让代码版本控制更好管理,也可以使用XID,故事版追求速度可以使用";
-"WhatsNew.Item4.Title" = "集成SWInject";
-"WhatsNew.Item4.Subtitle" = "Swinject 帮助您的应用程序拆分为松散耦合的组件,可以更轻松地开发、测试和维护这些组件";
+"WhatsNew.Item1.Subtitle" = "内部大量使用了RXSwift与Rx扩展来构建功能,抽离了视图、模型层内部采用RX进行数据绑定,明确层级职责,让代码维护变得更简单.";
+"WhatsNew.Item2.Title" = "主题切换";
+"WhatsNew.Item2.Subtitle" = "强大的主题定制在每一个细节,内置Light和Dark两种的外观主题,以及自定义的颜色主题(默认内置十多种颜色).";
+"WhatsNew.Item3.Title" = "APPLE设备多端运行";
+"WhatsNew.Item3.Subtitle" = "采用了Mac Catalyst技术已适配MacOS、Ios、IpadOS (可在Iphone、Ipad、M系列芯片的MacBook下运行).";
+"WhatsNew.Item4.Title" = "IOC控制反转";
+"WhatsNew.Item4.Subtitle" = "集成Swinject实现了IOC依赖控制反转,帮助您的应用程序拆分为松散耦合的组件,可以更轻松地开发、测试和维护这些组件.";
 "WhatsNew.CompletionButton.Title" = "继续";
